# rag-mvp

./: .env.example  .gitignore  LICENSE  Makefile  README.es.md  README.md  inspect_chroma.py  pyproject.toml
app/api/: main.py  routes.py
app/core/: config.py  ingestion.py  rag_chain.py
app/ui/: app.py
docs/: ARCHITECTURE.md  DATA_MODELS.md  PROTOCOL_API.md  SYSTEM_FLOWS.md
